# GitSessionCalculator

./: .gitignore  CMakeLists.txt
include/: Calculator.h  CalculatorUI.h
src/: Calculator.cpp  CalculatorUI.cpp  main.cpp
